[package]
name = "ed448-rust"
version = "0.1.0"
authors = ["Lolo_32 <lol.b@free.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.lazy_static]
version = "1.4.0"

[dependencies.log]
version = "0.4.14"

[dependencies.num-bigint]
version = "0.4.0"

[dependencies.num-integer]
version = "0.1.44"

[dependencies.num-traits]
version = "0.2.14"

[dependencies.opaque-debug]
version = "0.3.0"

[dependencies.rand_core]
version = "0.6.2"

[dependencies.sha3]
version = "0.9.1"

[dependencies.hex]
version = "0.4.3"

[dev-dependencies.base64]
version = "0.13.0"

[dev-dependencies.env_logger]
version = "0.8.3"

